[package]
name = "rust-norris"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
exitfailure = "0.5.1"
failure = "0.1.8"
reqwest =  { version = "0.11.4", features=["json"] }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
structopt = "0.3.21"
tokio =  {version = "1.7.1", features=["full"]}
